--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
         
         <div class="step">
             <h2>1. Disconnect Network</h2>
-            <p>Click Activate Airplane mode shortcut on your desktop.</p>
+            <p>Click Activate Airplane shortcut on your desktop.</p>
             <img src="report.png" alt="report">
+			<p>By activating Airplane mode, it will disconnect all your computer network.</p>
         </div>
 
         <div class="step">
             <h2>2. Contact IT Support</h2>
+			<p>Please report regardless the time, faster report can mitigate the risk.</p>
             <div class="phone-icons">
                 <a href="tel:+60125191823" title="Hirao"><i class="fas fa-phone-alt"></i> Hirao</a>
                 <a href="tel:+60148305951" title="Iskandar"><i class="fas fa-phone-alt"></i> Iskandar</a>
