--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
             <h2>2. Contact IT Support</h2>
 			<p>Please report regardless the time, faster report can mitigate the risk.</p>
             <div class="phone-icons">
+		<a href="tel:+60148305951" title="Iskandar"><i class="fas fa-phone-alt"></i> Iskandar</a>
                 <a href="tel:+60125191823" title="Hirao"><i class="fas fa-phone-alt"></i> Hirao</a>
-                <a href="tel:+60148305951" title="Iskandar"><i class="fas fa-phone-alt"></i> Iskandar</a>
             </div>
         </div>
 
         <div class="step">
-            <h2>Early Reporting and Mitigating Risk</h2>
-            <p>Promptly report any phishing attempts to IT support to minimize risks.</p>
+		<h2>24/7 IT Incident Support Line</h2>
+        	<h2>Early Reporting and Mitigating Risk</h2>
+        	<p>Promptly report any phishing attempts to IT support to minimize risks.</p>
         </div>
     </div>
 
