--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <div class="phone-icons">
 		<a href="tel:+60148305951" title="Iskandar"><i class="fas fa-phone-alt"></i> Iskandar</a>
                 <a href="tel:+60125191823" title="Hirao"><i class="fas fa-phone-alt"></i> Hirao</a>
+		<a href="tel:+60125191530" title="Carmen"><i class="fas fa-phone-alt"></i> Carmen</a>
             </div>
         </div>
 
