--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
         
         <div class="step">
             <h2>1. Disconnect Network</h2>
-            <p>Click Activate Airplane shortcut on your desktop.</p>
-            <img src="report.png" alt="report">
-			<p>By activating Airplane mode, it will disconnect all your computer network.</p>
+            <p>Laptop</p>
+            <img src="reportxx.png" alt="report">
+			<p>Turn off WIFI.</p>
+	    <p>Desktop</p>
+            <img src="reportx2.png" alt="report">
+			<p>Disconnect internet cable.</p>
         </div>
 
         <div class="step">
-            <h2>2. Contact IT Support</h2>
+            <h2>Contact IT Support</h2>
 			<p>Please report regardless the time, faster report can mitigate the risk.</p>
             <div class="phone-icons">
 		<a href="tel:+60148305951" title="Iskandar"><i class="fas fa-phone-alt"></i> Iskandar</a>
